# tailtrail-buildweek-demo

./: .gitignore  AGENTS.md  DEPENDENCY-GATE.md  EVALUATION-HARNESS.md  GOVERNANCE.md  GUARDRAILS.md  LICENSE  MCP-SERVER.md  PITCH-ONE-PAGER.md  README.md  SECURITY.md  TAILTRAIL-COMMANDS.md  TOKEN-AUTOPILOT.md  TOKEN-HARNESS.md  TOKEN-SLICER.md  USEFUL-PROMPTS.md  USER-GUIDE.md  VIDEO-PRODUCTION-GUIDE.md  tailtrail-policy.example.md  tailtrail-registry.schema.json  tailtrail_cli.py
tailtrail/: AGENTS.md  AIDLC.md  PITCH-DECK-OUTLINE.md  PITCH-PLAN.md  PITCH-SCRIPT.md  PUBLIC-CLAIMS.md  QUICKSTART.md  README.md  pyproject.toml  tailtrail-registry.json
tailtrail/.codex-plugin/: plugin.json
tailtrail/adapters/: README.md  chatgpt-instructions.md  claude.md  copilot-instructions.md  cursor.mdc  gemini.md
tailtrail/assets/: README.md
tailtrail/benchmarks/: README.md
tailtrail/context/: TailTrail.map.md  cache-index.md  change-impact.md  code-graph-mapper.md  compression-policy.md  cross-repo-reference.md  flow-catalog.md  graph-aware-learning.md  guardrail-layers.md  intent-aliases.md  learning-agent.md  learning-refresh.md  navigator.md  project-map.md  prune-rules.md  quality-loop.md  review-lenses.md  slices.md  token-router.md
tailtrail/hooks/: README.md  learning-capture-hook.py  tailtrail-lifecycle-hook.py  token-autopilot-hook.py  token-router-hook.py
tailtrail/schemas/: evaluation-harness-event.schema.json  token-harness-bridge-input.schema.json  token-harness-bridge-output.schema.json
tailtrail/scripts/: aidlc-check.py  aidlc-init.py  ast-map.py  (+80 more)
(+288 files in other folders)
